# strat-build-tool

./: README.md  backtester.py  base_strategy.py  main.py  performance.py  pyproject.toml
strategies/: ema_strategy.py  ma_strategy.py
