[project]
name = "strat-build-tool"
version = "0.1.0"
description = "Flexible framework for backtesting trading strategies on financial data."
authors = [
    {name = "Jay Thadeshwar",email = "jaythadeshwar007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "plotly (>=6.4.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
